<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOne.GameOneQ5">

    <CheckBox
        android:id="@+id/cbCourage_Q5"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="68dp"
        android:background="#FFFFFF"
        android:text="@string/CB1_Q5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1Q5" />

    <CheckBox
        android:id="@+id/cbIntel_Q5"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="96dp"
        android:background="#FFFFFF"
        android:text="@string/CB2_Q5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbCourage_Q5" />

    <CheckBox
        android:id="@+id/cbComique_Q5"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginStart="96dp"
        android:background="#FFFFFF"
        android:text="@string/CB3_Q5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbIntel_Q5" />

    <Button
        android:id="@+id/btSuivant_Q5"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/btsuivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView1Q5"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="30sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:background="#A81C0707"
        android:fontFamily="casual"
        android:text="@string/Question5"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btPreced_Q5"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/btprecedent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>