<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOne.GameoneInfos">

    <Button
        android:id="@+id/btPartager"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btpartager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/characterImage"
        android:layout_width="313dp"
        android:layout_height="208dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@android:drawable/alert_dark_frame"
        android:contentDescription="@string/ResDesImage" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="331dp"
        android:layout_height="152dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="48dp"
        android:background="#FCA370"
        android:gravity="center"
        android:text="@string/TvResDesc"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/characterImage" />

    <Button
        android:id="@+id/btReponses"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btReponses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="316dp"
        android:layout_height="61dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:background="#41000000"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/TvResTitle"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>