<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOne.GameOneQ6">

    <TextView
        android:id="@+id/textView1Q6"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeStepGranularity="2sp"
        android:background="#A81C0707"
        android:fontFamily="casual"
        android:text="@string/Question6"
        android:textAlignment="center"
        android:textColor="#FFC107"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btPreced_Q6"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/btprecedent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSuivant_Q6"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/btsuivant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switchQ6"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="#43FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/tvOn_Q6"
        app:layout_constraintStart_toEndOf="@+id/tvOff_Q6"
        app:layout_constraintTop_toBottomOf="@+id/textView1Q6"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvOff_Q6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:background="@color/white"
        android:text="@string/TvLeft_Q6"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchQ6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchQ6"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvOn_Q6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:background="@color/white"
        android:text="@string/TvRight_Q6"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchQ6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchQ6"
        app:layout_constraintVertical_bias="1.0"
        tools:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>